k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: application-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: application-server
    spec:
      containers:
        - name: docker-server
          image: stanislavpoliakov/docker-server:1.2.1
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /probe/liveness/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /probe/readiness/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 15
            failureThreshold: 5
