k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-service
spec:
  selector:
    app: application-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 32761
  type: NodePort
